tests/NormalTests/paczka1/fuzzy1/93792715.err
Error in line 6: KHyhqaR A870 87,8
Error in line 11: 8Ur6rX7 S500 0,5
Error in line 23: 8Ur6rX7 A90 -1,1
Error in line 35: 8Ur6rX7 A870 98,6
Error in line 18: A90 S500 19,9
Error in line 39: KHyhqaR Sh00 99,0
